--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-database.js"></script>
 </head>
-<body>
+<body style="overflow: hidden !important;">
     <div id="div-loading">
         <!-- <div class="dot-flashing"></div> -->
         <p>잠시만 기다려주세요</p>
