댓글 페이지 주석

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </div>
                 </div>
             </li>
-            <li class="sixth-content">
+            <!-- <li class="sixth-content">
                 <div class="sixth-content-detail">
                     <p class="title">축하메시지</p>
                     <div class="sixth-content-reply">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 </div>
-            </li>
+            </li> -->
         </ul>
     </div>
     <script src="/resources/js/common.js"></script>
@@ -223,8 +223,8 @@
             initializeDateStamp();
             preventDoubleTap();
             preventScrollOnReplyList();
-            initializeFirebaseUi();
-            initializeFirebaseDB();
+            // initializeFirebaseUi();
+            // initializeFirebaseDB();
         });
         $("body").waitForImages(true).done(function() {
             $("#div-loading").animate({opacity: 0}, 1000, function() {
