마우스 스크롤 오류 및 문구 수정

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             셔틀버스
                         </p>
                         <p class="letter">
-                            [고속버스터미널/신세계백화점]<br>
+                            [천안고속버스터미널/신세계백화점]<br>
                             신세계 백화점 옆 올리브영 매장 앞에서 첫 예식시간 1시간 전부터 30분 간격으로 셔틀버스 이용 가능(고속버스터미널↔비렌티웨딩홀)
                         </p>
                         <p class="letter">
@@ -223,6 +223,7 @@
             initializeDateStamp();
             preventDoubleTap();
             preventScrollOnReplyList();
+            enableMouseScroll();
             // initializeFirebaseUi();
             // initializeFirebaseDB();
         });
