불필요 import 제거

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <script src="/resources/js/jquery.waitforimages.min.js"></script>
 
     <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-auth.js"></script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/6.2.0/firebase-database.js"></script> -->
 </head>
 <body style="overflow: hidden !important;">
     <div id="div-loading">
@@ -217,6 +217,8 @@
         </ul>
     </div>
     <script src="/resources/js/common.js"></script>
+    <script src="/resources/js/jquery.mousewheel.min.js"></script>    
+
     <script>
         $(document).ready(function() {
             initializeCardSlider();
